@@ -2336,6 +2336,24 @@ block|}
 block|}
 end_function
 begin_comment
+comment|/*!     \class QSignalBlocker     \brief Exception-safe wrapper around QObject::blockSignals()     \since 5.3     \ingroup objectmodel      \reentrant      QSignalBlocker can be used whereever you would otherwise use a     pair of calls to blockSignals(). It blocks signals in its     constructor and in the destructor it resets the state to what     it was before the constructor ran.      \code     {     const QSignalBlocker blocker(someQObject);     // no signals here     }     \endcode     is thus equivalent to     \code     const bool wasBlocked = someQObject->blockSignals(true);     // no signals here     someQObject->blockSignals(false);     \endcode      except the code using QSignalBlocker is safe in the face of     exceptions.      \sa QMutexLocker, QEventLoopLocker */
+end_comment
+begin_comment
+comment|/*!     \fn QSignalBlocker::QSignalBlocker(QObject *object)      Constructor. Calls \a{object}->blockSignals(true). */
+end_comment
+begin_comment
+comment|/*!     \fn QSignalBlocker::QSignalBlocker(QObject&object)     \overload      Calls \a{object}.blockSignals(true). */
+end_comment
+begin_comment
+comment|/*!     \fn QSignalBlocker::~QSignalBlocker()      Destructor. Restores the QObject::signalsBlocked() state to what it     was before the constructor ran, unless unblock() has been called     without a following reblock(), in which case it does nothing. */
+end_comment
+begin_comment
+comment|/*!     \fn void QSignalBlocker::reblock()      Re-blocks signals after a previous unblock().      The numbers of reblock() and unblock() calls are not counted, so     every reblock() undoes any number of unblock() calls. */
+end_comment
+begin_comment
+comment|/*!     \fn void QSignalBlocker::unblock()      Temporarily restores the QObject::signalsBlocked() state to what     it was before this QSignaBlocker's constructor ran. To undo, use     reblock().      The numbers of reblock() and unblock() calls are not counted, so     every unblock() undoes any number of reblock() calls. */
+end_comment
+begin_comment
 comment|/*!     \class QObject     \inmodule QtCore     \brief The QObject class is the base class of all Qt objects.      \ingroup objectmodel      \reentrant      QObject is the heart of the Qt \l{Object Model}. The central     feature in this model is a very powerful mechanism for seamless     object communication called \l{signals and slots}. You can     connect a signal to a slot with connect() and destroy the     connection with disconnect(). To avoid never ending notification     loops you can temporarily block signals with blockSignals(). The     protected functions connectNotify() and disconnectNotify() make     it possible to track connections.      QObjects organize themselves in \l {Object Trees& Ownership}     {object trees}. When you create a QObject with another object as     parent, the object will automatically add itself to the parent's     children() list. The parent takes ownership of the object; i.e.,     it will automatically delete its children in its destructor. You     can look for an object by name and optionally type using     findChild() or findChildren().      Every object has an objectName() and its class name can be found     via the corresponding metaObject() (see QMetaObject::className()).     You can determine whether the object's class inherits another     class in the QObject inheritance hierarchy by using the     inherits() function.      When an object is deleted, it emits a destroyed() signal. You can     catch this signal to avoid dangling references to QObjects.      QObjects can receive events through event() and filter the events     of other objects. See installEventFilter() and eventFilter() for     details. A convenience handler, childEvent(), can be reimplemented     to catch child events.      Last but not least, QObject provides the basic timer support in     Qt; see QTimer for high-level support for timers.      Notice that the Q_OBJECT macro is mandatory for any object that     implements signals, slots or properties. You also need to run the     \l{moc}{Meta Object Compiler} on the source file. We strongly     recommend the use of this macro in all subclasses of QObject     regardless of whether or not they actually use signals, slots and     properties, since failure to do so may lead certain functions to     exhibit strange behavior.      All Qt widgets inherit QObject. The convenience function     isWidgetType() returns whether an object is actually a widget. It     is much faster than     \l{qobject_cast()}{qobject_cast}<QWidget *>(\e{obj}) or     \e{obj}->\l{inherits()}{inherits}("QWidget").      Some QObject functions, e.g. children(), return a QObjectList.     QObjectList is a typedef for QList<QObject *>.      \section1 Thread Affinity      A QObject instance is said to have a \e{thread affinity}, or that     it \e{lives} in a certain thread. When a QObject receives a     \l{Qt::QueuedConnection}{queued signal} or a \l{The Event     System#Sending Events}{posted event}, the slot or event handler     will run in the thread that the object lives in.      \note If a QObject has no thread affinity (that is, if thread()     returns zero), or if it lives in a thread that has no running event     loop, then it cannot receive queued signals or posted events.      By default, a QObject lives in the thread in which it is created.     An object's thread affinity can be queried using thread() and     changed using moveToThread().      All QObjects must live in the same thread as their parent. Consequently:      \list     \li setParent() will fail if the two QObjects involved live in         different threads.     \li When a QObject is moved to another thread, all its children         will be automatically moved too.     \li moveToThread() will fail if the QObject has a parent.     \li If \l{QObject}s are created within QThread::run(), they cannot         become children of the QThread object because the QThread does         not live in the thread that calls QThread::run().     \endlist      \note A QObject's member variables \e{do not} automatically become     its children. The parent-child relationship must be set by either     passing a pointer to the child's \l{QObject()}{constructor}, or by     calling setParent(). Without this step, the object's member variables     will remain in the old thread when moveToThread() is called.      \target No copy constructor     \section1 No copy constructor or assignment operator      QObject has neither a copy constructor nor an assignment operator.     This is by design. Actually, they are declared, but in a     \c{private} section with the macro Q_DISABLE_COPY(). In fact, all     Qt classes derived from QObject (direct or indirect) use this     macro to declare their copy constructor and assignment operator to     be private. The reasoning is found in the discussion on     \l{Identity vs Value} {Identity vs Value} on the Qt \l{Object     Model} page.      The main consequence is that you should use pointers to QObject     (or to your QObject subclass) where you might otherwise be tempted     to use your QObject subclass as a value. For example, without a     copy constructor, you can't use a subclass of QObject as the value     to be stored in one of the container classes. You must store     pointers.      \section1 Auto-Connection      Qt's meta-object system provides a mechanism to automatically connect     signals and slots between QObject subclasses and their children. As long     as objects are defined with suitable object names, and slots follow a     simple naming convention, this connection can be performed at run-time     by the QMetaObject::connectSlotsByName() function.      \l uic generates code that invokes this function to enable     auto-connection to be performed between widgets on forms created     with \e{Qt Designer}. More information about using auto-connection with \e{Qt Designer} is     given in the \l{Using a Designer UI File in Your Application} section of     the \e{Qt Designer} manual.      \section1 Dynamic Properties      From Qt 4.2, dynamic properties can be added to and removed from QObject     instances at run-time. Dynamic properties do not need to be declared at     compile-time, yet they provide the same advantages as static properties     and are manipulated using the same API - using property() to read them     and setProperty() to write them.      From Qt 4.3, dynamic properties are supported by     \l{Qt Designer's Widget Editing Mode#The Property Editor}{Qt Designer},     and both standard Qt widgets and user-created forms can be given dynamic     properties.      \section1 Internationalization (i18n)      All QObject subclasses support Qt's translation features, making it possible     to translate an application's user interface into different languages.      To make user-visible text translatable, it must be wrapped in calls to     the tr() function. This is explained in detail in the     \l{Writing Source Code for Translation} document.      \sa QMetaObject, QPointer, QObjectCleanupHandler, Q_DISABLE_COPY()     \sa {Object Trees& Ownership} */
 end_comment
 begin_comment
