@@ -3396,8 +3396,207 @@ endif|#
 directive|endif
 end_endif
 begin_decl_stmt
-name|namespace
+name|class
+name|Q_CORE_EXPORT
+name|QSignalBlocker
+block|{
+name|public
+label|:
+specifier|inline
+name|explicit
+name|QSignalBlocker
+parameter_list|(
+name|QObject
+modifier|*
+name|o
+parameter_list|)
+function_decl|;
+specifier|inline
+name|explicit
+name|QSignalBlocker
+parameter_list|(
+name|QObject
+modifier|&
+name|o
+parameter_list|)
+function_decl|;
+specifier|inline
+operator|~
+name|QSignalBlocker
+argument_list|()
+expr_stmt|;
+specifier|inline
+name|void
+name|reblock
+parameter_list|()
+function_decl|;
+specifier|inline
+name|void
+name|unblock
+parameter_list|()
+function_decl|;
+name|private
+label|:
+name|Q_DISABLE_COPY
+argument_list|(
+argument|QSignalBlocker
+argument_list|)
+name|QObject
+modifier|*
+specifier|const
+name|m_o
+decl_stmt|;
+name|bool
+name|m_blocked
+decl_stmt|;
+name|bool
+name|m_inhibited
+decl_stmt|;
+block|}
+end_decl_stmt
+begin_empty_stmt
+empty_stmt|;
+end_empty_stmt
+begin_expr_stmt
+DECL|function|QSignalBlocker
+name|QSignalBlocker
+operator|::
+name|QSignalBlocker
+argument_list|(
+name|QObject
+operator|*
+name|o
+argument_list|)
+operator|:
+name|m_o
+argument_list|(
+name|o
+argument_list|)
+operator|,
+name|m_blocked
+argument_list|(
+name|o
+operator|&&
+name|o
+operator|->
+name|blockSignals
+argument_list|(
+name|true
+argument_list|)
+argument_list|)
+operator|,
+name|m_inhibited
+argument_list|(
+argument|false
+argument_list|)
+block|{}
+DECL|function|QSignalBlocker
+name|QSignalBlocker
+operator|::
+name|QSignalBlocker
+argument_list|(
+name|QObject
+operator|&
+name|o
+argument_list|)
+operator|:
+name|m_o
+argument_list|(
+operator|&
+name|o
+argument_list|)
+operator|,
+name|m_blocked
+argument_list|(
+name|o
+operator|.
+name|blockSignals
+argument_list|(
+name|true
+argument_list|)
+argument_list|)
+operator|,
+name|m_inhibited
+argument_list|(
+argument|false
+argument_list|)
+block|{}
+DECL|function|~QSignalBlocker
+name|QSignalBlocker
+operator|::
+operator|~
+name|QSignalBlocker
+argument_list|()
+block|{
+if|if
+condition|(
+name|m_o
+operator|&&
+operator|!
+name|m_inhibited
+condition|)
+name|m_o
+operator|->
+name|blockSignals
+argument_list|(
+name|m_blocked
+argument_list|)
+expr_stmt|;
+block|}
+end_expr_stmt
+begin_expr_stmt
+DECL|function|reblock
+name|void
+name|QSignalBlocker
+operator|::
+name|reblock
+argument_list|()
+block|{
+if|if
+condition|(
+name|m_o
+condition|)
+name|m_o
+operator|->
+name|blockSignals
+argument_list|(
+name|true
+argument_list|)
+expr_stmt|;
+name|m_inhibited
+operator|=
+name|false
+expr_stmt|;
+end_expr_stmt
+begin_expr_stmt
+unit|}  void
+DECL|function|unblock
+name|QSignalBlocker
+operator|::
+name|unblock
+argument_list|()
+block|{
+if|if
+condition|(
+name|m_o
+condition|)
+name|m_o
+operator|->
+name|blockSignals
+argument_list|(
+name|m_blocked
+argument_list|)
+expr_stmt|;
+name|m_inhibited
+operator|=
+name|true
+expr_stmt|;
+end_expr_stmt
+begin_macro
+unit|}  namespace
 name|QtPrivate
+end_macro
+begin_block
 block|{
 specifier|inline
 name|QObject
@@ -3429,7 +3628,7 @@ name|o
 return|;
 block|}
 block|}
-end_decl_stmt
+end_block
 begin_define
 DECL|macro|Q_SET_OBJECT_NAME
 define|#
