@@ -246,6 +246,10 @@ function_decl|;
 endif|#
 directive|endif
 name|void
+name|signalBlocking
+parameter_list|()
+function_decl|;
+name|void
 name|blockingQueuedConnection
 parameter_list|()
 function_decl|;
@@ -22596,6 +22600,215 @@ argument_list|)
 block|; }
 endif|#
 directive|endif
+DECL|function|signalBlocking
+name|void
+name|tst_QObject
+operator|::
+name|signalBlocking
+operator|(
+operator|)
+block|{
+name|SenderObject
+name|sender
+block|;
+name|ReceiverObject
+name|receiver
+block|;
+name|receiver
+operator|.
+name|connect
+argument_list|(
+operator|&
+name|sender
+argument_list|,
+name|SIGNAL
+argument_list|(
+name|signal1
+argument_list|()
+argument_list|)
+argument_list|,
+name|SLOT
+argument_list|(
+name|slot1
+argument_list|()
+argument_list|)
+argument_list|)
+block|;
+name|sender
+operator|.
+name|emitSignal1
+argument_list|()
+block|;
+name|QVERIFY
+argument_list|(
+name|receiver
+operator|.
+name|called
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+block|;
+name|receiver
+operator|.
+name|reset
+argument_list|()
+block|;
+block|{
+name|QSignalBlocker
+name|blocker
+argument_list|(
+operator|&
+name|sender
+argument_list|)
+block|;
+name|sender
+operator|.
+name|emitSignal1
+argument_list|()
+block|;
+name|QVERIFY
+argument_list|(
+operator|!
+name|receiver
+operator|.
+name|called
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+block|;
+name|receiver
+operator|.
+name|reset
+argument_list|()
+block|;
+name|sender
+operator|.
+name|blockSignals
+argument_list|(
+literal|false
+argument_list|)
+block|;
+name|sender
+operator|.
+name|emitSignal1
+argument_list|()
+block|;
+name|QVERIFY
+argument_list|(
+name|receiver
+operator|.
+name|called
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+block|;
+name|receiver
+operator|.
+name|reset
+argument_list|()
+block|;
+name|sender
+operator|.
+name|blockSignals
+argument_list|(
+literal|true
+argument_list|)
+block|;
+name|sender
+operator|.
+name|emitSignal1
+argument_list|()
+block|;
+name|QVERIFY
+argument_list|(
+operator|!
+name|receiver
+operator|.
+name|called
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+block|;
+name|receiver
+operator|.
+name|reset
+argument_list|()
+block|;
+name|blocker
+operator|.
+name|unblock
+argument_list|()
+block|;
+name|sender
+operator|.
+name|emitSignal1
+argument_list|()
+block|;
+name|QVERIFY
+argument_list|(
+name|receiver
+operator|.
+name|called
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+block|;
+name|receiver
+operator|.
+name|reset
+argument_list|()
+block|;
+name|blocker
+operator|.
+name|reblock
+argument_list|()
+block|;
+name|sender
+operator|.
+name|emitSignal1
+argument_list|()
+block|;
+name|QVERIFY
+argument_list|(
+operator|!
+name|receiver
+operator|.
+name|called
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+block|;
+name|receiver
+operator|.
+name|reset
+argument_list|()
+block|;     }
+name|sender
+operator|.
+name|emitSignal1
+argument_list|()
+block|;
+name|QVERIFY
+argument_list|(
+name|receiver
+operator|.
+name|called
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+block|;
+name|receiver
+operator|.
+name|reset
+argument_list|()
+block|; }
 DECL|function|blockingQueuedConnection
 name|void
 name|tst_QObject
